--- a/Bookstore_Project/Views/Home/Index.cshtml
+++ b/Bookstore_Project/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @model BooksViewModel
 
 
-<h1 class="m-5">Tanner's Mock Bookstore</h1>
+<h1 class="m-5">Tanner's Bookstore</h1>
 
 @foreach (Book b in Model.Books)
 {
