--- a/Bookstore_Project/Views/_ViewImports.cshtml
+++ b/Bookstore_Project/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @addTagHelper *, Bookstore_Project
 @using Bookstore_Project.Models
 @using Bookstore_Project.Models.ViewModels
+@using Bookstore_Project.Infastructure
