--- a/Bookstore_Project/Views/Home/Index.cshtml
+++ b/Bookstore_Project/Views/Home/Index.cshtml
@@ -4,24 +4,11 @@
 @model BooksViewModel
 
 
-<h1 class="m-5">Tanner's Bookstore</h1>
+<h1 class="m-2">Available Books</h1>
 
 @foreach (Book b in Model.Books)
 {
-<div class="card card-outline-primary m-1 p-1">
-    <div class="bg-faded p-1">
-        <h3 class="display-1">@b.Title</h3>
-        <h4 class="display-2">By @b.Author</h4>
-        <ul class="list-unstyled">
-            <li>Category: @b.Category</li>
-            <li>Genre: @b.Classification</li>
-            <li>@b.PageCount Pages</li>
-            <li>Price: $@b.Price</li>
-            <li>ISBN: @b.Isbn</li>
-        </ul>
-        <h5 class="display-6">Published by @b.Publisher</h5>
-    </div>
-</div>
+    <partial name="BookSummary" model="b" />
 }
 
 @*<div page-model="@Model.PageInfo" page-action="Index"></div>*@
