--- a/Bookstore_Project/Views/Shared/_Layout.cshtml
+++ b/Bookstore_Project/Views/Shared/_Layout.cshtml
@@ -8,10 +8,21 @@
     <link href="~/lib/css/bootstrap-grid.css" rel="stylesheet" />
     <link href="~/lib/css/bootstrap-reboot.css" rel="stylesheet" />
     <link href="~/lib/css/bootstrap-utilities.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha512-ZYg+hQvLlM0W9C3P6vTpes5LmJ66G2EsroxDNzwD6qiulckldb29eD9I672HL2X+LH5nRhY1sQqZLJGB+aUUPg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>@ViewBag.Title</title>
 </head>
 <body>
+    <div class="bg-dark text-white p-2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col navbar-brand">SPORTS STORE</div>
+                <div class="col-6 text-right">
+                    <vc:cart-summary />
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="bg-dark text-white p-2">
         <span class="navbar-brand m-lg-2">Tanner's Bookstore</span>
@@ -31,11 +42,6 @@
     </div>
 
 
-
-    <div page-model="@Model.PageInfo" page-action="Index" page-classes-enabled="true"
-         page-class="btn" page-class-normal="btn-outline-dark"
-         page-class-selected="btn-primary" class="btn-group pull-right m-1">
-    </div>
 
     <footer>Built By Tanner Funk Solutions</footer>
 </body>
